WorkerFetchContext::ShouldLoadNewResource returns true

Since we don't have MemoryCache on worker, this should always be true.


Bug: 772030
Change-Id: I9ed8efdcf2ace829b88219496eabddd66f150ebe
Reviewed-on: https://chromium-review.googlesource.com/716596
Commit-Queue: Tsuyoshi Horo <horo@chromium.org>
Reviewed-by: Nate Chapin <japhet@chromium.org>
Reviewed-by: Tsuyoshi Horo <horo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508534}
Former-commit-id: bc4f798718c568ea5abfe7c4b858ffa7f4443d4f