third_party/WebKit/Source/core/loader/WorkerFetchContext.h
@@ -53,6 +53,7 @@ class WorkerFetchContext final : public BaseFetchContext {
       SecurityViolationReportingPolicy) const override;
   bool ShouldBlockFetchAsCredentialedSubresource(const ResourceRequest&,
                                                  const KURL&) const override;
+  bool ShouldLoadNewResource(Resource::Type) const override { return true; }
   ReferrerPolicy GetReferrerPolicy() const override;
   String GetOutgoingReferrer() const override;
   const KURL& Url() const override;
